--- a/.github/workflows/production.yaml
+++ b/.github/workflows/production.yaml
@@ -22,5 +22,5 @@ jobs:
         uses: akhileshns/heroku-deploy@v3.12.12
         with:
           heroku_api_key: ${{secrets.Heroku_Api_Key}}
-          heroku_app_name: ${{secrets.App_Name}}" #Must be unique in Heroku
+          heroku_app_name: ${{secrets.App_Name}} #Must be unique in Heroku
           heroku_email: ${{secrets.Email}}
